# msckf_vio

./: CMakeLists.txt
backend_result/backend/: backend.txt  stamped_groundtruth.txt  stamped_traj_estimate.txt
backend_result/euroc/V1_01/: stamped_groundtruth.txt  stamped_traj_estimate.txt
backend_result/euroc/test/: stamped_groundtruth.txt  stamped_traj_estimate.txt
imu/: imu_1.txt
include/msckf_vio/: feature.hpp  imu_state.h  math_utils.hpp  msckf_vio.h
launch/: image_processor_euroc.launch  msckf_vio.launch  msckf_vio_backend.launch  msckf_vio_euroc.launch
msg/: BiasEstiInfo.msg
path/: record_1.txt  record_2.txt  record_3.txt
script/: draw.py  draw_backend.py  draw_q.py  generateimuflight.py  record.py  record_vio_backend.py  test_vicon_gt.py
src/: image_processor.cpp  msckf_vio.cpp
test/: feature_initialization_test.cpp
test_vicon_gt/: vicon.txt  vicon_wxyz.txt
